# cpp-for-games-tutorial

1_0_hello_world/: README.md  main.cpp  test
1_1_tests/: README.md  main.cpp  practice
1_2_delta_time/: delta_timer  main.cpp
test_plataformer/: CMakeLists.txt
test_plataformer/include/: Game.hpp
test_plataformer/include/AI/: AIController.hpp
test_plataformer/include/Abilities/: Ability.hpp  AreaAbility.hpp  BulletAbility.hpp  MeleeAbility.hpp  RangedAbility.hpp
test_plataformer/include/Core/: Camera.hpp  Constants.hpp  GameState.hpp
test_plataformer/include/Entities/: Enemy.hpp  Entity.hpp  MeleeEnemy.hpp  Player.hpp  Projectile.hpp  RangedEnemy.hpp  TankEnemy.hpp
test_plataformer/include/Input/: InputHandler.hpp
test_plataformer/include/Physics/: AABB.hpp  CollisionSystem.hpp  PhysicsEngine.hpp
test_plataformer/include/Scene/: LevelOne.hpp  LevelThree.hpp  LevelTwo.hpp  Platform.hpp  Scene.hpp  SceneManager.hpp  Tree.hpp
test_plataformer/src/: Game.cpp
test_plataformer/src/AI/: AIController.cpp
test_plataformer/src/Abilities/: Ability.cpp  AreaAbility.cpp  BulletAbility.cpp  MeleeAbility.cpp  RangedAbility.cpp
test_plataformer/src/Core/: Camera.cpp
test_plataformer/src/Entities/: Enemy.cpp  Entity.cpp  MeleeEnemy.cpp  Player.cpp  Projectile.cpp  RangedEnemy.cpp  TankEnemy.cpp
test_plataformer/src/Input/: InputHandler.cpp
test_plataformer/src/Physics/: AABB.cpp  CollisionSystem.cpp  PhysicsEngine.cpp
test_plataformer/src/Scene/: LevelOne.cpp  LevelThree.cpp  LevelTwo.cpp  Platform.cpp  Scene.cpp  SceneManager.cpp  Tree.cpp
(+32 files in other folders)
